--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my simple website again</title>
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h3>My First Website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+        cupiditate rem debitis est, nobis magni amet. Facilis dignissimos
+        inventore corrupti dolore labore! Est pariatur obcaecati doloribus,
+        laborum blanditiis molestias.
+      </p>
+    </div>
+  </body>
 </html>
